# deeplib

./: .gitignore  README.rst  READNE.rst  pyproject.toml  requirements.txt
deeplib/: __init__.py  neural_network_mnist.py  symbolic_differentiation.py
deeplib/from_scratch/: feet_forward_neural_network_mnist.py  linear_ml_models.py  symbolic_differentiation.py
deeplib/using_libs/introduction_to_scikit_learn/: linear_regression.ipynb
tests/: conftest.py  test_linear_ml_models.py  test_neural_network_mnist.py  test_symbolics.py
